<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jadwal Kuliah</string>
    <string name="hello_world">Hello world!</string>
    <string name="senin">Senin</string>
    <string name="selasa">Selasa</string>
    <string name="rabu">Rabu</string>
    <string name="kamis">Kamis</string>
    <string name="jumat">Jumat</string>
    
    <string name="action_tambah">Tambah Jadwal</string>
    <string name="action_lihat">Lihat Jadwal</string>
    
    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

</resources>
